--- a/package.json
+++ b/package.json
@@ -5,11 +5,13 @@
   "license": "MIT",
   "dependencies": {
     "apollo-boost": "0.3.1",
+    "apollo-link-context": "1.0.15",
     "axios": "0.18.0",
     "express": "4.16.4",
     "graphql": "14.1.1",
     "isomorphic-unfetch": "3.0.0",
     "next": "8.0.3",
+    "nookies": "2.0.1",
     "react": "16.8.4",
     "react-apollo": "2.5.2",
     "react-dom": "16.8.4"
